fix sidebar overflow view

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -3,7 +3,7 @@
 	left: 0;
 	width: 616px;
 	height: 100%;
-	overflow: scroll;
+	overflow: auto;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
@@ -22,6 +22,7 @@
 	height: auto;
 	min-height: 100%;
 	padding: 50px 31px;
+	overflow-y: auto;
 	background-color: #ffffff;
 	border-right: 1px solid #000000;
 }
